--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database connection string
-DATABASE_URI=postgres://postgres:<password>@127.0.0.1:5432/your-database-name
+DATABASE_URI=postgresql://neondb_owner:npg_Um87fVtZGFbz@ep-super-snow-adtkqtnf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding='postgresqlesql
 
 # Or use a PG connection string
 #DATABASE_URI=postgresql://127.0.0.1:5432/your-database-name
