--- a/package.json
+++ b/package.json
@@ -78,6 +78,50 @@
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
   }
+}    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
+    "geist": "^1.3.0",
+    "graphql": "^16.8.2",
+    "lucide-react": "^0.378.0",
+    "next": "^15.1.5",
+    "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.4",
+    "payload-admin-bar": "3.20.0",
+    "prism-react-renderer": "^2.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-aria-components": "^1.5.0",
+    "react-hook-form": "7.45.4",
+    "sharp": "0.32.6",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-react-aria-components": "^1.2.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@tailwindcss/postcss": "^4.0.0-beta.9",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/escape-html": "^1.0.2",
+    "@types/node": "22.5.4",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "^10.4.19",
+    "copyfiles": "^2.4.1",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^4.0.0-beta.9",
+    "typescript": "5.7.2"
+  },
+  "engines": {
+    "node": "^18.20.2 || >=20.9.0"
+  }
 }    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
